--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,13 +1,29 @@
 ---
 galaxy_info:
   author: buluma
+  role_name: victoriametrics
   description: Role for VictoriaMetrics
   company: ShadowNet
   license: Apache-2.0
   min_ansible_version: 2.10
   galaxy_tags: []
   platforms:
+    - name: Alpine
+      versions:
+        - all
     - name: Debian
       versions:
-        - 9
+        - all
+    - name: EL
+      versions:
+        - 8
+    - name: Fedora
+      versions:
+        - all
+    - name: OpenSUSE
+      versions:
+        - all
+    - name: Ubuntu
+      versions:
+        - all
 dependencies: []
