--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -5,4 +5,4 @@
 repository:
   description: Role for VictoriaMetrics
   homepage: https://buluma.github.io/
-  topics: , ansible, molecule, tox, playbook, hacktoberfest
+  topics: victoriametrics, ansible, molecule, tox, playbook, hacktoberfest
