--- a/.github/workflows/gitlab_trigger.yml
+++ b/.github/workflows/gitlab_trigger.yml
@@ -17,13 +17,13 @@ jobs:
         with:
           status: starting
           channel: "#ansible"
-          message: Starting buluma.victoria_metrics GitLab Trigger...
+          message: Starting buluma.victoriametrics GitLab Trigger...
         if: always()
       - uses: actions/checkout@v3
       - name: Mirror + trigger CI
         uses: buluma/gitlab-mirror-ci-action@1.0.6
         with:
-          args: "buluma/ansible-role-victoria_metrics"
+          args: "buluma/ansible-role-victoriametrics"
         env:
           GITLAB_HOSTNAME: "gitlab.com"
           GITLAB_USERNAME: "buluma"
