--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 # defaults file for VictoriaMetrics
-victoriametrics_repo_url: "https://github.com/VictoriaMetrics/VictoriaMetrics"
+victoriametrics_repo_url: "http://github.com/VictoriaMetrics/VictoriaMetrics"
 victoriametrics_download_url: "{{ victoriametrics_repo_url }}/releases/download/{{ victoriametrics_version }}/victoria-metrics-{{ victoriametrics_version }}.tar.gz"
 victoriametrics_vmutils_download_url: "{{ victoriametrics_repo_url }}/releases/download/{{ victoriametrics_version }}/vmutils-amd64-{{ victoriametrics_version }}.tar.gz"
 victoriametrics_version: "v1.28.0"
