--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -6,5 +6,7 @@
 
   roles:
     - role: buluma.bootstrap
-    # - role: buluma.ca
+    - role: buluma.python_pip
+    - role: buluma.ca
+    - role: buluma.ca_certificates
     - role: buluma.victoriametrics
