--- a/requirements.yml
+++ b/requirements.yml
@@ -1,5 +1,7 @@
 ---
 roles:
   - name: buluma.bootstrap
+  - name: buluma.python_pip
   - name: buluma.ca
+  - name: buluma.ca_certificates
 collections:
