--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,22 +1,16 @@
 ---
-debug_exec: true
-# Install options
-victoriametrics_install_standalone: true
-victoriametrics_install_cluster: false  # todo
-victoriametrics_install_vmutils: true
-
-victoriametrics_cluster_role: [vminsert, vmselect, vmstorage]
-victoriametrics_version: "1.67.0"
-victoriametrics_vmutils_version: "1.67.0"
-victoriametrics_cluster_version: "1.67.0"
-
-victoriametrics_system_user: "victoriametrics"
-victoriametrics_system_group: "{{ victoriametrics_system_user }}"
-
-# Systemd options
-victoriametrics_data_dir: "/var/lib/victoria-metrics/"
-victoriametrics_retention_period: "12"
-victoriametrics_service_args:
+proxy_env: {}
+victoriametrics_version: 1.57.1
+victoriametrics_web_listen_address: 0.0.0.0
+victoriametrics_web_listen_port: 8428
+victoriametrics_binary_install_dir: /usr/local/bin
+victoriametrics_system_user: "{{ victoriametrics_user | default('prometheus') }}"
+victoriametrics_system_group: "{{ victoriametrics_group | default('prometheus') }}"
+victoriametrics_data_dir: /var/lib/victoriametrics
+victoriametrics_config_dir: /etc/victoriametrics
+victoriametrics_log_level: warn
+victoriametrics_log_format: json
+victoriametrics_prometheus_config: {}
+victoriametrics_limit_nofile: 16384
+victoriametrics_config:
   storageDataPath: "{{ victoriametrics_data_dir }}"
-  retentionPeriod: "{{ victoriametrics_retention_period }}"
-victoriametrics_max_open_files: 2097152
