--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,24 +1,15 @@
 ---
-- name: Restart VictoriaMetrics service
-  service:
+- name: restart victoriametrics
+  systemd:
     daemon_reload: true
     name: victoriametrics
     state: restarted
+  become: true
+  tags: victoriametrics
 
-- name: Restart vminsert service
-  service:
-    daemon_reload: true
-    name: vminsert
-    state: restarted
-
-- name: Restart vmselect service
-  service:
-    daemon_reload: true
-    name: vmselect
-    state: restarted
-
-- name: Restart vmstorage service
-  service:
-    daemon_reload: true
-    name: vmstorage
-    state: restarted
+- name: reload victoriametrics
+  systemd:
+    name: victoriametrics
+    state: reloaded
+  become: true
+  tags: victoriametrics
