--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,27 +1,26 @@
 ---
 galaxy_info:
-  author: buluma
   role_name: victoriametrics
-  description: "Deploy [victoriametrics](https://victoriametrics.com/) monitoring system."
-  license: "Apache-2.0"
-  min_ansible_version: 2.10
-
+  namespace: buluma
+  author: Michael Buluma
+  description: Ansible role for installing and configuring victoriametrics storage backend
+  license: "MIT"
+  min_ansible_version: 2.9
   platforms:
-    - name: "Ubuntu"
+    - name: Debian
       versions:
-        - "focal"
-        - "bionic"
-    - name: "Debian"
+        - buster
+        - stretch
+    - name: Ubuntu
       versions:
-        - "all"
-    - name: "EL"
-      versions:
-        - "all"
-
+        - focal
+        - bionic
   galaxy_tags:
-    - vmutils
-    - victoriametrics
-    - prometheus
+    - system
+    - network
+    - linux
     - monitoring
-
+    - prometheus
+    - node
+    - exporter
 dependencies: []
