--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,5 +1,9 @@
 ---
-victoriametrics_repo_url: "https://github.com/VictoriaMetrics/VictoriaMetrics"
-victoriametrics_url: "{{ victoriametrics_repo_url }}/releases/download/v{{ victoriametrics_version }}/victoria-metrics-amd64-v{{ victoriametrics_version }}.tar.gz"
-victoriametrics_cluster_url: "{{ victoriametrics_repo_url }}/releases/download/v{{ victoriametrics_cluster_version }}/victoria-metrics-v{{ victoriametrics_cluster_version }}-cluster.tar.gz"
-victoriametrics_vmutils_url: "{{ victoriametrics_repo_url }}/releases/download/v{{ victoriametrics_vmutils_version }}/vmutils-amd64-v{{ victoriametrics_vmutils_version }}.tar.gz"
+go_arch_map:
+  i386: '386'
+  x86_64: 'amd64'
+  aarch64: 'arm64'
+  armv7l: 'arm'
+  armv6l: 'arm'
+
+go_arch: "{{ go_arch_map[ansible_architecture] | default(ansible_architecture) }}"
