--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -1,19 +1,10 @@
 ---
 - name: Verify
-  hosts: localhost
+  hosts: all
+  become: yes
   gather_facts: no
 
   tasks:
-    - name: check if wait_for_connection_succeeded exist
-      ansible.builtin.stat:
-        path: /tmp/wait_for_connection_succeeded.txt
-      register: wait_for_connection_status
-      failed_when:
-        - not wait_for_connection_status.stat.exists
-
-    - name: check if become_succeeded exist
-      ansible.builtin.stat:
-        path: /tmp/become_succeeded.txt
-      register: become_status
-      failed_when:
-        - not become_status.stat.exists
+    - name: see if victoriametrics is installed
+      ansible.builtin.command:
+        cmd: victoriametrics --version
