--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,26 +1,24 @@
 ---
 galaxy_info:
   role_name: victoriametrics
-  namespace: buluma
   author: Michael Buluma
   description: Ansible role for installing and configuring victoriametrics storage backend
-  license: "MIT"
+  license: "Apache-2.0"
   min_ansible_version: 2.9
   platforms:
     - name: Debian
       versions:
-        - buster
-        - stretch
+        - all
     - name: Ubuntu
       versions:
         - focal
         - bionic
   galaxy_tags:
-    - system
-    - network
-    - linux
-    - monitoring
-    - prometheus
-    - node
-    - exporter
+  - system
+  - network
+  - linux
+  - monitoring
+  - prometheus
+  - node
+  - exporter
 dependencies: []
