--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -14,7 +14,7 @@ lint: |
 driver:
   name: docker
 platforms:
-  - name: "facts-${image:-fedora}-${tag:-latest}${TOX_ENVNAME}"
+  - name: "victoriametrics-${image:-fedora}-${tag:-latest}${TOX_ENVNAME}"
     image: "${namespace:-buluma}/${image:-fedora}:${tag:-latest}"
     command: /sbin/init
     volumes:
@@ -22,6 +22,4 @@ platforms:
     privileged: yes
     pre_build_image: yes
 provisioner:
-  name: ansible
-verifier:
   name: ansible
