--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -73,15 +73,15 @@
       tags: victoriametrics
       when: victoriametrics_version == "latest"
 
-- name: set fact for version split
-  set_fact:
-    victoriametrics_version2: "{{ __victoriametrics_current_version_output.stdout_lines[0].split('-')[5]|regex_search('[0-9.]+') }}"
-  tags: victoriametrics
-
-- name: defined version
-  tags: victoriametrics
-  debug:
-    msg: "{{ victoriametrics_version2 }}"
+# - name: set fact for version split
+#   set_fact:
+#     victoriametrics_version2: "{{ __victoriametrics_current_version_output.stdout_lines[0].split('-')[5]|regex_search('[0-9.]+') }}"
+#   tags: victoriametrics
+#
+# - name: defined version
+#   tags: victoriametrics
+#   debug:
+#     msg: "{{ victoriametrics_version2 }}"
 
 - block:
     - name: get checksum list from github
