--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -40,6 +40,14 @@ jobs:
             tag: "latest"
           - image: "debian-systemd"
             tag: "bookworm"
+          - image: "fedora-systemd"
+            tag: "34"
+          - image: "fedora-systemd"
+            tag: "latest"
+          - image: "enterpriselinux"
+            tag: "7"
+          - image: "enterpriselinux"
+            tag: "latest"
           - image: "docker-ubuntu-systemd"
             tag: "focal"
           - image: "docker-ubuntu-systemd"
