--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,12 @@ molecule:
   retry: 1
   parallel:
     matrix:
+      - image: "alpine-openrc"
+        tag: "latest"
+      - image: "amazonlinux"
+        tag: "latest"
+      - image: "enterpriselinux"
+        tag: "latest"
       - image: "debian-systemd"
         tag: "latest"
       - image: "debian-systemd"
@@ -22,14 +28,14 @@ molecule:
         tag: "34"
       - image: "fedora-systemd"
         tag: "latest"
-      - image: "enterpriselinux"
-        tag: "7"
-      - image: "enterpriselinux"
+      - image: "opensuse"
         tag: "latest"
       - image: "docker-ubuntu-systemd"
-        tag: "focal"
+        tag: "latest"
       - image: "docker-ubuntu-systemd"
         tag: "bionic"
+      - image: "docker-ubuntu-systemd"
+        tag: "focal"
 
 testing:
   script:
@@ -39,6 +45,12 @@ testing:
   retry: 1
   parallel:
     matrix:
+      - image: "alpine-openrc"
+        tag: "latest"
+      - image: "amazonlinux"
+        tag: "latest"
+      - image: "enterpriselinux"
+        tag: "latest"
       - image: "debian-systemd"
         tag: "latest"
       - image: "debian-systemd"
@@ -47,14 +59,14 @@ testing:
         tag: "34"
       - image: "fedora-systemd"
         tag: "latest"
-      - image: "enterpriselinux"
-        tag: "7"
-      - image: "enterpriselinux"
+      - image: "opensuse"
         tag: "latest"
       - image: "docker-ubuntu-systemd"
-        tag: "focal"
+        tag: "latest"
       - image: "docker-ubuntu-systemd"
         tag: "bionic"
+      - image: "docker-ubuntu-systemd"
+        tag: "focal"
 
 galaxy:
   script:
@@ -66,6 +78,12 @@ role_testing:
   retry: 1
   parallel:
     matrix:
+      - image: "alpine-openrc"
+        tag: "latest"
+      - image: "amazonlinux"
+        tag: "latest"
+      - image: "enterpriselinux"
+        tag: "latest"
       - image: "debian-systemd"
         tag: "latest"
       - image: "debian-systemd"
@@ -74,11 +92,11 @@ role_testing:
         tag: "34"
       - image: "fedora-systemd"
         tag: "latest"
-      - image: "enterpriselinux"
-        tag: "7"
-      - image: "enterpriselinux"
+      - image: "opensuse"
         tag: "latest"
       - image: "docker-ubuntu-systemd"
-        tag: "focal"
+        tag: "latest"
       - image: "docker-ubuntu-systemd"
         tag: "bionic"
+      - image: "docker-ubuntu-systemd"
+        tag: "focal"
