--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,19 +7,27 @@ galaxy_info:
   license: "Apache-2.0"
   min_ansible_version: 2.9
   platforms:
+    - name: Alpine
+      versions:
+        - all
+    - name: Amazon
+      versions:
+        - Candidate
+    - name: EL
+      versions:
+        - 8
     - name: Debian
       versions:
         - all
     - name: Fedora
       versions:
         - all
-    - name: EL
+    - name: OpenSUSE
       versions:
         - all
     - name: Ubuntu
       versions:
-        - focal
-        - bionic
+        - all
   galaxy_tags:
     - system
     - network
