--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -36,12 +36,6 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - image: "alpine-openrc"
-            tag: "latest"
-          - image: "amazonlinux"
-            tag: "latest"
-          - image: "enterpriselinux"
-            tag: "latest"
           - image: "debian-systemd"
             tag: "latest"
           - image: "debian-systemd"
@@ -50,14 +44,14 @@ jobs:
             tag: "34"
           - image: "fedora-systemd"
             tag: "latest"
-          - image: "opensuse"
+          - image: "enterpriselinux"
+            tag: "7"
+          - image: "enterpriselinux"
             tag: "latest"
-          - image: "docker-ubuntu-systemd"
-            tag: "latest"
-          - image: "docker-ubuntu-systemd"
-            tag: "bionic"
           - image: "docker-ubuntu-systemd"
             tag: "focal"
+          - image: "docker-ubuntu-systemd"
+            tag: "bionic"
     steps:
       - name: checkout
         uses: actions/checkout@v3
