--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: create system group
-  group:
+  ansible.builtin.group:
     name: "{{ victoriametrics_system_group }}"
     system: true
     state: present
@@ -9,7 +9,7 @@
   tags: victoriametrics
 
 - name: create system user
-  user:
+  ansible.builtin.user:
     name: "{{ victoriametrics_system_user }}"
     system: true
     shell: "/sbin/nologin"
@@ -20,7 +20,7 @@
   tags: victoriametrics
 
 - name: create data directory
-  file:
+  ansible.builtin.file:
     path: "{{ victoriametrics_data_dir }}"
     state: directory
     owner: "{{ victoriametrics_system_user }}"
@@ -30,7 +30,7 @@
   tags: victoriametrics
 
 - name: check if victoriametrics is installed
-  stat:
+  ansible.builtin.stat:
     path: "/usr/local/bin/victoriametrics"
   register: __victoriametrics_is_installed
   become: true
@@ -48,7 +48,7 @@
 
 - block:
     - name: get latest release
-      uri:
+      ansible.builtin.uri:
         url: "https://api.github.com/repos/VictoriaMetrics/VictoriaMetrics/releases/latest"
         method: GET
         return_content: true
@@ -65,7 +65,7 @@
       retries: 5
 
     - name: "set victoriametrics version to {{ _latest_release.json.tag_name[1:] }}"
-      set_fact:
+      ansible.builtin.set_fact:
         victoriametrics_version: "{{ _latest_release.json.tag_name[1:] }}"
       delegate_to: localhost
       run_once: true
@@ -85,7 +85,7 @@
 
 - block:
     - name: get checksum list from github
-      set_fact:
+      ansible.builtin.set_fact:
         _checksums: "{{ lookup('url', 'https://github.com/VictoriaMetrics/VictoriaMetrics/releases/download/v' + victoriametrics_version + '/victoria-metrics-' + go_arch + '-v' + victoriametrics_version + '_checksums.txt', wantlist=True) | list }}"
       environment: "{{ proxy_env }}"
       run_once: true
@@ -93,7 +93,7 @@
       tags: victoriametrics
 
     - name: "get checksum for {{ go_arch }} architecture"
-      set_fact:
+      ansible.builtin.set_fact:
         victoriametrics_checksum: "{{ item.split(' ')[0] }}"
       with_items: "{{ _checksums }}"
       when: "('victoria-metrics-v' + victoriametrics_version + '.tar.gz') in item"
@@ -101,7 +101,7 @@
       tags: victoriametrics
 
     - name: download binary to local folder
-      get_url:
+      ansible.builtin.get_url:
         url: "https://github.com/VictoriaMetrics/VictoriaMetrics/releases/download/v{{ victoriametrics_version }}/victoria-metrics-{{ go_arch }}-v{{ victoriametrics_version }}.tar.gz"
         dest: "/tmp/victoriametrics-{{ victoriametrics_version }}.linux-{{ go_arch }}.tar.gz"
         checksum: "sha256:{{ victoriametrics_checksum }}"
@@ -116,7 +116,7 @@
       tags: victoriametrics
 
     - name: unpack binary
-      unarchive:
+      ansible.builtin.unarchive:
         src: "/tmp/victoriametrics-{{ victoriametrics_version }}.linux-{{ go_arch }}.tar.gz"
         dest: "/tmp"
         creates: "/tmp/victoriametrics-{{ victoriametrics_version }}.linux-{{ go_arch }}/victoriametrics"
@@ -126,7 +126,7 @@
       tags: victoriametrics
 
     - name: propagate binaries
-      copy:
+      ansible.builtin.copy:
         src: "/tmp/victoria-metrics-prod"
         dest: "{{ victoriametrics_binary_install_dir }}/victoriametrics"
         mode: 0755
@@ -140,7 +140,7 @@
 
 - block:
     - name: create config directory
-      file:
+      ansible.builtin.file:
         path: "{{ victoriametrics_config_dir }}"
         state: directory
         owner: "{{ victoriametrics_system_user }}"
@@ -150,7 +150,7 @@
       tags: victoriametrics
 
     - name: create config file
-      template:
+      ansible.builtin.template:
         src: victoriametrics.config.json.j2
         dest: "{{ victoriametrics_config_dir }}/config.yml"
         owner: "{{ victoriametrics_system_user }}"
@@ -162,7 +162,7 @@
       when: victoriametrics_prometheus_config | length > 0
 
 - name: create systemd service unit
-  template:
+  ansible.builtin.template:
     src: victoriametrics.service.j2
     dest: /etc/systemd/system/victoriametrics.service
     owner: root
@@ -173,7 +173,7 @@
   tags: victoriametrics
 
 - name: start and enable victoriametrics
-  systemd:
+  ansible.builtin.systemd:
     daemon_reload: true
     name: victoriametrics
     enabled: true
