--- a/meta/main.yml
+++ b/meta/main.yml
@@ -18,8 +18,7 @@ galaxy_info:
         - all
     - name: Ubuntu
       versions:
-        - focal
-        - bionic
+        - all
   galaxy_tags:
     - system
     - network
@@ -29,4 +28,5 @@ galaxy_info:
     - node
     - exporter
     - victoriametrics
+    - victoriametricscluster
 dependencies: []
