--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -10,7 +10,7 @@ on:
   schedule:
     - cron: '43 22 * * *'
   workflow_dispatch:
-  push: {branches: ["master", "main", "testing"]}
+  push: {branches: ["master", "main"]}
 
 concurrency:
   group: ${{ github.ref }}-${{ github.workflow }}
@@ -43,15 +43,21 @@ jobs:
           - image: "fedora-systemd"
             tag: "34"
           - image: "fedora-systemd"
+            tag: "35"
+          - image: "fedora-systemd"
             tag: "latest"
           - image: "enterpriselinux"
             tag: "7"
           - image: "enterpriselinux"
             tag: "latest"
           - image: "docker-ubuntu-systemd"
-            tag: "focal"
+            tag: "latest"
           - image: "docker-ubuntu-systemd"
             tag: "bionic"
+          - image: "docker-ubuntu-systemd"
+            tag: "focal"
+          - image: "docker-ubuntu-systemd"
+            tag: "jammy"
     steps:
       - name: checkout
         uses: actions/checkout@v3
