--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,8 @@ variables:
   PY_COLORS: 1
 
 molecule:
+  stage: build
+  allow_failure: true
   script:
     - image=${image} tag=${tag} molecule test
   retry: 1
@@ -21,17 +23,25 @@ molecule:
       - image: "fedora-systemd"
         tag: "34"
       - image: "fedora-systemd"
+        tag: "35"
+      - image: "fedora-systemd"
         tag: "latest"
       - image: "enterpriselinux"
         tag: "7"
       - image: "enterpriselinux"
         tag: "latest"
       - image: "docker-ubuntu-systemd"
-        tag: "focal"
+        tag: "latest"
       - image: "docker-ubuntu-systemd"
         tag: "bionic"
+      - image: "docker-ubuntu-systemd"
+        tag: "focal"
+      - image: "docker-ubuntu-systemd"
+        tag: "jammy"
 
 testing:
+  stage: test
+  needs: []
   script:
     - image=${image} tag=${tag} molecule test
   rules:
@@ -46,21 +56,31 @@ testing:
       - image: "fedora-systemd"
         tag: "34"
       - image: "fedora-systemd"
+        tag: "35"
+      - image: "fedora-systemd"
         tag: "latest"
       - image: "enterpriselinux"
         tag: "7"
       - image: "enterpriselinux"
         tag: "latest"
       - image: "docker-ubuntu-systemd"
-        tag: "focal"
+        tag: "latest"
       - image: "docker-ubuntu-systemd"
         tag: "bionic"
+      - image: "docker-ubuntu-systemd"
+        tag: "focal"
+      - image: "docker-ubuntu-systemd"
+        tag: "jammy"
 
 galaxy:
+  stage: deploy
+  needs: []
   script:
     - ansible-galaxy role info buluma.victoriametrics
 
 role_testing:
+  stage: test
+  needs: []
   script:
     - image=${image} tag=${tag} ansible-galaxy install buluma.victoriametrics
   retry: 1
@@ -73,12 +93,36 @@ role_testing:
       - image: "fedora-systemd"
         tag: "34"
       - image: "fedora-systemd"
+        tag: "35"
+      - image: "fedora-systemd"
         tag: "latest"
       - image: "enterpriselinux"
         tag: "7"
       - image: "enterpriselinux"
         tag: "latest"
       - image: "docker-ubuntu-systemd"
-        tag: "focal"
+        tag: "latest"
       - image: "docker-ubuntu-systemd"
         tag: "bionic"
+      - image: "docker-ubuntu-systemd"
+        tag: "focal"
+      - image: "docker-ubuntu-systemd"
+        tag: "jammy"
+
+release_job:
+  stage: .post
+  needs: [molecule]
+  image: registry.gitlab.com/gitlab-org/release-cli:latest
+  rules:
+    - if: $CI_COMMIT_TAG
+  script:
+    - echo "Running the release job."
+  release:
+    tag_name: $CI_COMMIT_TAG
+    name: 'Release $CI_COMMIT_TAG'
+    description: 'Release created using the release-cli.'
+  artifacts:
+    name: "$CI_JOB_STAGE-$CI_COMMIT_REF_NAME"
+    paths:
+      - /
+    expire_in: 1 day
