--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,11 +1,10 @@
 ---
 galaxy_info:
   role_name: victoriametrics
-  namespace: buluma
-  author: Michael Buluma
+  author: buluma
   description: Ansible role for installing and configuring victoriametrics storage backend
   license: "Apache-2.0"
-  min_ansible_version: 2.9
+  min_ansible_version: "2.10"
   platforms:
     - name: Debian
       versions:
