--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: create system group
-  group:
+- name: Create system group
+  ansible.builtin.group:
     name: "{{ victoriametrics_system_group }}"
     system: true
     state: present
@@ -8,8 +8,8 @@
   become: true
   tags: victoriametrics
 
-- name: create system user
-  user:
+- name: Create system user
+  ansible.builtin.user:
     name: "{{ victoriametrics_system_user }}"
     system: true
     shell: "/sbin/nologin"
@@ -19,8 +19,8 @@
   become: true
   tags: victoriametrics
 
-- name: create data directory
-  file:
+- name: Create data directory
+  ansible.builtin.file:
     path: "{{ victoriametrics_data_dir }}"
     state: directory
     owner: "{{ victoriametrics_system_user }}"
@@ -29,14 +29,14 @@
   become: true
   tags: victoriametrics
 
-- name: check if is installed
-  stat:
+- name: Check if is installed
+  ansible.builtin.stat:
     path: "/usr/local/bin/victoriametrics"
   register: __victoriametrics_is_installed
   become: true
   tags: victoriametrics
 
-- name: gather currently installed version (if any)
+- name: Gather currently installed version (if any)
   command: "/usr/local/bin/victoriametrics -version"
   args:
     warn: false
@@ -48,8 +48,8 @@
   check_mode: false
 
 - block:
-    - name: get latest release
-      uri:
+    - name: Get latest release
+      ansible.builtin.uri:
         url: "https://api.github.com/repos/VictoriaMetrics/VictoriaMetrics/releases/latest"
         method: GET
         return_content: true
@@ -65,47 +65,46 @@
       tags: victoriametrics
       retries: 5
 
-    - name: "set victoriametrics version to {{ _latest_release.json.tag_name[1:] }}"
-      set_fact:
+    - name: "Set victoriametrics version to {{ _latest_release.json.tag_name[1:] }}"
+      ansible.builtin.set_fact:
         victoriametrics_version: "{{ _latest_release.json.tag_name[1:] }}"
-      tags: victoriametrics
       when: victoriametrics_version == "latest"
       delegate_to: localhost
       run_once: true
       become: true
       tags: victoriametrics
 
-    - name: set fact for version split
-      set_fact:
+    - name: Set fact for version split
+      ansible.builtin.set_fact:
         victoriametrics_version2: "{{ __victoriametrics_current_version_output.stdout_lines[0].split('-')[5]|regex_search('[0-9.]+') }}"
       tags: victoriametrics
       when: __victoriametrics_current_version_output.stdout_lines is defined
 
-    - name: defined version
+    - name: Defined version
       tags: victoriametrics
-      debug:
+      ansible.builtin.debug:
         msg: "{{ victoriametrics_version2 }}"
       when: __victoriametrics_current_version_output.stdout_lines is defined
 
 - block:
-    - name: get checksum list from github
-      set_fact:
+    - name: Get checksum list from github
+      ansible.builtin.set_fact:
         _checksums: "{{ lookup('url', 'https://github.com/VictoriaMetrics/VictoriaMetrics/releases/download/v' + victoriametrics_version + '/victoria-metrics-' + go_arch + '-v' + victoriametrics_version + '_checksums.txt', wantlist=True) | list }}"
       environment: "{{ proxy_env }}"
       run_once: true
       become: true
       tags: victoriametrics
 
-    - name: "get checksum for {{ go_arch }} architecture"
-      set_fact:
+    - name: "Get checksum for {{ go_arch }} architecture"
+      ansible.builtin.set_fact:
         victoriametrics_checksum: "{{ item.split(' ')[0] }}"
       with_items: "{{ _checksums }}"
       when: "('victoria-metrics-' + go_arch + '-v' + victoriametrics_version + '.tar.gz') in item"
       become: true
       tags: victoriametrics
 
-    - name: download binary to local folder
-      get_url:
+    - name: Download binary to local folder
+      ansible.builtin.get_url:
         url: "https://github.com/VictoriaMetrics/VictoriaMetrics/releases/download/v{{ victoriametrics_version }}/victoria-metrics-{{ go_arch }}-v{{ victoriametrics_version }}.tar.gz"
         dest: "/tmp/victoriametrics-{{ victoriametrics_version }}.linux-{{ go_arch }}.tar.gz"
         checksum: "sha256:{{ victoriametrics_checksum }}"
@@ -119,8 +118,8 @@
       become: false
       tags: victoriametrics
 
-    - name: unpack binary
-      unarchive:
+    - name: Unpack binary
+      ansible.builtin.unarchive:
         src: "/tmp/victoriametrics-{{ victoriametrics_version }}.linux-{{ go_arch }}.tar.gz"
         dest: "/tmp"
         creates: "/tmp/victoriametrics-{{ victoriametrics_version }}.linux-{{ go_arch }}/victoriametrics"
@@ -129,22 +128,22 @@
       become: false
       tags: victoriametrics
 
-    - name: propagate binaries
-      copy:
+    - name: Propagate binaries
+      ansible.builtin.copy:
         src: "/tmp/victoria-metrics-prod"
         dest: "{{ victoriametrics_binary_install_dir }}/victoriametrics"
         mode: 0755
         owner: root
         group: root
-      notify: restart victoriametrics
+      notify: Restart victoriametrics
       when: not ansible_check_mode
       become: true
       tags: victoriametrics
       when: (not __victoriametrics_is_installed.stat.exists) or (__victoriametrics_current_version_output.stdout_lines[0].split("-")[5]|regex_search('[0-9.]+') != victoriametrics_version)
 
 - block:
-    - name: create config directory
-      file:
+    - name: Create config directory
+      ansible.builtin.file:
         path: "{{ victoriametrics_config_dir }}"
         state: directory
         owner: "{{ victoriametrics_system_user }}"
@@ -153,31 +152,31 @@
       become: true
       tags: victoriametrics
 
-    - name: create config file
-      template:
+    - name: Create config file
+      ansible.builtin.template:
         src: victoriametrics.config.json.j2
         dest: "{{ victoriametrics_config_dir }}/config.yml"
         owner: "{{ victoriametrics_system_user }}"
         group: "{{ victoriametrics_system_group }}"
         mode: 0644
-      notify: restart victoriametrics
+      notify: Restart victoriametrics
       become: true
       tags: victoriametrics
       when: victoriametrics_prometheus_config | length > 0
 
-- name: create systemd service unit
-  template:
+- name: Create systemd service unit
+  ansible.builtin.template:
     src: victoriametrics.service.j2
     dest: /etc/systemd/system/victoriametrics.service
     owner: root
     group: root
     mode: 0644
-  notify: restart victoriametrics
+  notify: Restart victoriametrics
   become: true
   tags: victoriametrics
 
-- name: start and enable victoriametrics
-  systemd:
+- name: Start and enable victoriametrics
+  ansible.builtin.systemd:
     daemon_reload: true
     name: victoriametrics
     enabled: true
