Update files using ansible-generator

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,9 +2,9 @@
 galaxy_info:
   author: buluma
   role_name: victoriametrics
-  description: 'Ansible role for installing and configuring victoriametrics storage backend'
+  description: "Ansible role for installing and configuring victoriametrics storage backend"
   license: Apache-2.0
-  min_ansible_version: '2.12
+  min_ansible_version: "2.12"
   platforms:
     - name: Debian
       versions:
